# vlstm_cuda

./: .clangd  .clangd_server  .gitignore  CUDA_DEVICES_PROPS.md  README.md  backprop_playground.ipynb  environment_pt2.1.0cu118_main.yaml  environment_pt2.1.0cu121.yaml  environment_pt2.1.0cu121_local.yaml  environment_pt2.2.0cu121_noversions.yaml  environment_pt220cu121_noversions.yaml  environment_pt240cu121_noversions.yaml  environment_scratch.yaml  mm_v0.ipynb  mm_v1.ipynb  mm_v2.ipynb  playg_v1.ipynb  playg_v2.ipynb  playg_v2_1.ipynb  plot_utils.py  qkv_v0.ipynb  qkv_v1.ipynb  shared_mem_space.ipynb  template.py  vlstm_fw_v0.ipynb  vlstm_fw_v1.ipynb  vlstm_fwbw_v0-bw.ipynb  vlstm_fwbw_v0-fw.ipynb  vlstm_fwbw_v0.ipynb  vlstm_fwbw_v1-fw-precision.ipynb  vlstm_fwbw_v1-fwbw-agonly.ipynb  vlstm_fwbw_v1-fwbw-directonly.ipynb  vlstm_fwbw_v1-fwbw-directonly2-debugkernel.ipynb  vlstm_fwbw_v1-fwbw-precision-debug_half.ipynb  vlstm_fwbw_v1-fwbw-precision.ipynb  vlstm_fwbw_v1-fwbw-sizemax-debug.ipynb  vlstm_fwbw_v1-fwbw-sizemax.ipynb  vlstm_fwbw_v1-fwbw.ipynb  vlstm_fwbw_v2-fw-increaseshmem.ipynb  vlstm_fwbw_v2-fwbw-sizemax.ipynb  (+4 more)
conv1d/: conv1d.py  match_conv1d_parallel_and_recurrent.ipynb
cuda_examples/: bf16TensorCoreGemm.cu  results_bf16TensorCoreGemm.md  test_cuda_tensorcore.cu
kernel_call_checks/: multicall_fwbw.py
make_tutorial/: README.md
src/: cuda_init.py
src/gpu_info/: assign_struct.py  defs_cudaDeviceProperties.cc  gpu_info.cc  gpu_info.cu  gpu_info.h  gpu_info.py  gpu_info_test.cc
src/matrixMul/: Makefile
src/mm_v0/: CMakeLists.txt  interface.cc  interface.py  kernels.cu  main.cpp
src/mm_v1/: interface.cc  interface.h  interface.py  kernel_dispatchers.h  kernels.cu
src/mm_v2/: helper_cuda.h  interface.cc  (+4 more)
src/playg_v2/: CMakeLists.txt  funcs.cc  funcs.cu  funcs.py  interface.h  kernel_dispatchers.h  main.cpp
src/vlstm_v1/: CMakeLists.txt  interface.cc  interface.py  kernel_dispatchers.h  kernels.cu  main.cpp
src_triton/: README_triton.md  utils.py
triton_notebooks/: fused_attention.ipynb  gate_matrix_computation.ipynb  mlstm_parallel_fw_v0-mlstm_fw.ipynb  mlstm_parallel_fw_v0-qkv.ipynb  mlstm_parallel_fw_v0-qkv_causal.ipynb  mlstm_parallel_fw_v0.ipynb  mlstm_parallel_fwbw_v0-mlstm_bw.ipynb  mlstm_parallel_fwbw_v0-mlstm_bw2.ipynb  mlstm_parallel_fwbw_v0-mlstm_fw.ipynb
vlstm_formulations/: gla_chunkwise_recurrent.py  match_chunkwise_parallel_and_parallel.ipynb  match_parallel_tiled_and_parallel.ipynb  match_parallel_w_and_wo_groupnorm.ipynb  match_parallel_w_groupnorm_tiled_and_parallel.ipynb  match_recurrrent_and_parallel.ipynb  match_recurrrent_simple_and_parallel.ipynb  test_gla_chunkwise_recurrent.ipynb  vlstm_chunkwise_parallel.py  vlstm_parallel.py  vlstm_parallel_tiled.py  vlstm_parallel_tiled_fw.py  vlstm_parallel_w_groupnorm.py  vlstm_parallel_w_groupnorm_tiled_bw.py  vlstm_recurrent.py  vlstm_recurrent_simple.py  vlstm_scan.py
vlstm_fw_bw_torch/: fw_bw_Dmat_torch.ipynb  fw_bw_full_torch.ipynb  fw_bw_gatesonly_torch.ipynb  fw_bw_nogates_notstabilized_torch.ipynb  fw_bw_nogates_stabilized_torch.ipynb  fw_bw_notstabilized_torch.ipynb  fw_bw_stabilized_torch.ipynb  fw_bw_torch.ipynb  vlstm_Dmat.py  vlstm_full.py  vlstm_fw_full.py  vlstm_fw_nogatematrices.py  vlstm_fw_normalization.ipynb  vlstm_fw_tiled.ipynb  vlstm_fw_tiled.py  vlstm_gatesonly.py  vlstm_nogatematrices.py
vlstm_scan/: match_recurrrent_and_parallel.ipynb
(+119 files in other folders)
